# zeebe-client-rust

./: Cargo.toml  README.md  test.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: activate.rs  activate_jobs.rs  cancel_process_instance.rs  complete_job.rs  create.rs  create_process_instance.rs  deploy.rs  deploy_resource.rs  fail_job.rs  incident.rs  main.rs  publish.rs  publish_message.rs  resolve_incident.rs  retries.rs  set_variables.rs  status.rs  throw_error.rs  update_retries.rs
client/: Cargo.toml  build.rs
client/proto/: gateway.proto
client/src/: auth.rs  lib.rs
resources/: start-end.bpmn
src/: deploy.rs  lib.rs  main.rs  mapping.rs  topology.rs
worker/: Cargo.toml
