[package]
name = "zeebe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
zeebe-client = { path = "../client" }
clap = { version = "3.2", features = ["derive", "env"] }
color-eyre = "0.6"
tonic = "0.8"
tokio = { version = "1", features=["full"] }
tracing = {version="0.1.36", features=["async-await", "log"]}
tracing-subscriber = "0.3.15"
async-trait = "0.1.57"
