[package]
name = "zeebe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
zeebe-client = { path = "../client" }
clap = { version = "4.1", features = ["derive", "env"] }
color-eyre = "0.6"
tonic = { version = "0.8", features = ["tls", "tls-roots", "gzip"] }
tokio = { version = "1", features=["full"] }
tracing = { version="0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = { version = "0.2", features = ["traced-error"] }
tracing-tree = { version = "0.2" }
async-trait = "0.1.66"
