[package]
name = "zeebe-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.8", features = ["tls", "tls-roots", "gzip"] }
prost = "0.13"
thiserror = "1.0"
tracing = { version="0.1", features = ["async-await"] }
oauth2 = { version = "4.3.0", features = ["ureq"] }

[build-dependencies]
tonic-build = { version = "0.8" }
prost-build = "0.13"
